linked js and css, added color to selected elements

--- a/protein_explorer.html
+++ b/protein_explorer.html
@@ -1,12 +1,18 @@
-<body>
-<div id="annotation_list" class="mono">
-</div>
-<br/>
-<br/>
-<div id="sequence" class="mono">
-</div>
-<br/>
-<br/>
-<div id="messages" class="mono">
-</div>
-</body>
+<html>
+<head>
+  <script src="protein_explorer.js"></script>
+  <link rel="stylesheet" href="protein_explorer.css" />
+</head>
+<body onload="intialize()">
+  <div id="annotation_list" class="mono">
+  </div>
+  <br/>
+  <br/>
+  <div id="sequence" class="mono">
+  </div>
+  <br/>
+  <br/>
+  <div id="messages" class="mono">
+  </div>
+  </body>
+</html>
